<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ListActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/editTextMsg"
                android:layout_width="match_parent"
                android:layout_height="119dp"
                android:ems="10"
                android:layout_margin="8dp"
                android:inputType="textPersonName"
                android:hint="@string/write_msg" />

            <Spinner
                android:id="@+id/spinnerMsg"
                android:layout_width="match_parent"
                android:layout_margin="8dp"
                android:layout_height="46dp"
                android:entries="@array/msg_type"/>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radioSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="radioClick"
                    android:text="@string/save_msg" />

                <RadioButton
                    android:id="@+id/radioNosave"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:onClick="radioClick"
                    android:text="@string/no_save_msg" />
            </RadioGroup>

            <Switch
                android:id="@+id/switchRemember"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:text="@string/remember_config" />

            <Button
                android:id="@+id/buttonShow"
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:layout_margin="8dp"
                android:text="@string/show_config"
                android:onClick="showMsgConfig"/>

            <TextView
                android:id="@+id/textViewConfig"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:textSize="26sp" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>